--- a/src/index.css
+++ b/src/index.css
@@ -158,6 +158,33 @@ header .presentation::before{
     font-family: "Montserrat", serif;
 }
 
+header .shop-cart .checkout-btn {
+    padding: 10px 20px; 
+    margin-top: 10px;
+    background: #df8f59; 
+    color: white;
+    font-size: 16px; 
+    font-weight: 600;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    text-align: center;
+    position: absolute; 
+    right: 20px; 
+    bottom: 5px; 
+  }
+  
+  header .shop-cart .checkout-btn:hover {
+    background-color: #c77a4b; 
+    transform: scale(1.05);
+  }
+  
+  header .shop-cart .checkout-btn:focus {
+    outline: none;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  }
+
 .full-item{
     position: fixed;
     top: 0;
@@ -279,3 +306,92 @@ footer .contact-info ul {
   footer .contact-info a:hover {
     color: #0069d9; /* Цвет ссылки при наведении */
   }
+
+  .checkout-container {
+    margin: 50px auto;
+    width: 500px;
+    background: #f5f5f5;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.checkout-container h2 {
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    color: #333;
+    text-align: center;
+}
+
+.checkout-container form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+}
+
+.checkout-container label {
+    font-size: 16px;
+    font-weight: 500;
+    color: #333;
+    width: 100%;
+    text-align: center;
+}
+
+.checkout-container input {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+    width: 80%; /* Делает поля ввода немного меньше */
+    max-width: 350px;
+    transition: border-color 0.3s ease;
+}
+
+.checkout-container input:focus {
+    border-color: #df8f59;
+    box-shadow: 0 0 5px rgba(223, 143, 89, 0.5);
+}
+
+.checkout-container input::placeholder {
+    color: #aaa; /* Цвет плейсхолдера */
+    font-size: 16px;
+    opacity: 1;
+}
+
+.checkout-container button {
+    padding: 12px 20px;
+    background-color: #df8f59;
+    border: none;
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 300ms ease;
+    width: 80%;
+    max-width: 350px;
+}
+
+.checkout-container button:hover {
+    background-color: #c77e4e;
+}
+
+.checkout-container .date-input,
+.checkout-container .name-input {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    width: 100%;
+}
+
+.checkout-container .name-input input {
+    width: 45%;
+}
+
+.checkout-container .date-input input {
+    width: 80%;
+}
+
